# mailgeno

./: .env.test  Dockerfile  README.md  compose.yaml  pyproject.toml
mailgeno/: abc.py  config.py  controllers.py  logger.py  main.py  sender.py
mailgeno/app/: base.py  factory.py  http.py  loop_lock.py  rabbit.py
src/: config.py  dto.py  main.py  sender.py
src/app/: base.py  factory.py  http.py  loop_lock.py  rabbit.py
